cmake_minimum_required(VERSION 3.30)
project(Project5)

set(CMAKE_CXX_STANDARD 20)

add_executable(Project5
        proj5-BUAthlete.cpp
        proj5-BUAthlete.h
        proj5-main.cpp
        proj5-testmain.cpp
        proj5-NCAAAthlete.cpp
        proj5-NCAAAthlete.h
        proj5-BUAthleteList.cpp
        proj5-BUAthleteList.h
        )
